--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ html {
 }
 
 .header {
-    font-family:cute;
-    font-size:100px;
+    font-family:'CuteFont';
+    font-size:90px;
     text-align:center;
     color:#124375;
     text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
@@ -37,6 +37,16 @@ html {
     justify-content: center;
     align-items: center;
     gap:20px;
+
+    animation: bounce 1s ease infinite;
+}
+
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  25%  { transform: translateY(-10px); }
+  50%  { transform: translateY(0); }
+  75%  { transform: translateY(-5px); }
+  100% { transform: translateY(0); }
 }
 
 .main {
