--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,14 @@ html {
     border-radius: 10px;
     border:1px dashed #7babde;
     overflow: hidden;
+    margin-bottom: 15px;
 }
 
-.mainbox.sidebar {
+.darkborder {
+  border-color: rgb(18, 67, 117);;
+}
+
+.sidebar {
   width:30%;
 }
 
@@ -97,12 +102,14 @@ html {
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
 }
 
-.pixelated {
+.icon {
+  height: 25px;
   image-rendering: pixelated;
+  float:right; 
+  border-radius:5px;
 }
 
 .about-section {
-
   margin: 10px 0px;
   display: flex;
   align-items: flex-start;
@@ -148,5 +155,57 @@ html {
 .social-link {
   text-decoration: none; /* remove underline */
   color: inherit;        /* keep text color */
-  display: block;        /* makes the whole box clickable */
+  display: block;        /* makes the whole box clkable */
+}
+
+.calendar {
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  background: #111;
+  color: #fff;
+  box-shadow: 0 0 15px #6c63ff;
+}
+
+.calendar-header {
+  text-align: center;
+  padding: 1px;
+  background: #6c63ff;
+  font-weight: bold;
+}
+
+.calendar-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  text-align: center;
+}
+
+.day-name {
+  font-weight: bold;
+  padding: 5px;
+  background: #222;
+}
+
+.day {
+  padding: 1px;
+  border: 1px solid #222;
+}
+
+.day:hover {
+  background: #6c63ff;
+  cursor: pointer;
+}
+
+.empty {
+  background: transparent;
+  border: none;
+}
+
+.calendar-page {
+  text-align: center;
+  margin: -3px 0px;
+}
+
+.text-outline {
+  text-shadow: -1px -1px 0 #a8c9fe, 1px -1px 0 #a8c9fe, -1px 1px 0 #a8c9fe, 1px 1px 0 #a8c9fe;
 }
