--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 }
 
 .container {
-    width:600px;
+    width:700px;
     height:100vh;
     margin:0 auto;
     position:relative;
@@ -62,6 +62,7 @@ html {
 }
 
 .mainbox {
+  align-items: center;
     width:100%;
     background-color: white;
     padding:12px;
@@ -72,15 +73,25 @@ html {
     margin-bottom: 15px;
 }
 
+.border {
+  border: 1px dashed #7babde;
+  border-radius: 10px;
+}
+
 .darkborder {
-  border-color: rgb(18, 67, 117);;
+  border-color: rgb(18, 67, 117);
 }
 
 .sidebar {
-  width:30%;
+  width:25%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .middle {
+  display: flex;
+  height: 100%;
   width:45%
 }
 
@@ -149,13 +160,20 @@ html {
   transform: translateX(4px);
   background: rgb(18, 67, 117, 0.1);
   cursor: pointer;
-  text-shadow: -0.3px -0.3px 0 #a8c9fe, 0.3px -0.3px 0 #a8c9fe, -0.3px 0.3px 0 #a8c9fe, 0.3px 0.3px 0 #a8c9fe;
 }
 
 .social-link {
-  text-decoration: none; /* remove underline */
-  color: inherit;        /* keep text color */
-  display: block;        /* makes the whole box clkable */
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+.social-link:hover {
+  text-shadow: -0.3px -0.3px 0 #a8c9fe, 0.3px -0.3px 0 #a8c9fe, -0.3px 0.3px 0 #a8c9fe, 0.3px 0.3px 0 #a8c9fe;
+}
+
+#weather:hover {
+    text-decoration: underline;
 }
 
 .calendar {
@@ -203,9 +221,13 @@ html {
 
 .calendar-page {
   text-align: center;
-  margin: -3px 0px;
+  margin: -5px 0px;
 }
 
 .text-outline {
   text-shadow: -1px -1px 0 #a8c9fe, 1px -1px 0 #a8c9fe, -1px 1px 0 #a8c9fe, 1px 1px 0 #a8c9fe;
+}
+
+.text-outline-s {
+  text-shadow: -0.5px -0.5px 0 #afafaf, 0.5px -0.5px 0 #afafaf, -0.5px 0.5px 0 #afafaf, 0.5px 0.5px 0 #afafaf;
 }
